Back to old versening Not support in node.js, must config in grunt !

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link type="text/plain" rel="author" href="humans.txt" />
   <link type="text/css" rel="stylesheet" href="http://alimd.github.io/libs/normalize/2.1.0/normalize.min.css" />
-  <link type="text/css" rel="stylesheet" href="style.0.1.css" />
+  <link type="text/css" rel="stylesheet" href="style.css?v=0.1" />
 
 </head>
 <body>
@@ -74,7 +74,7 @@
   <script type="text/javascript" src="http://alimd.github.io/libs/modernizr/2.6.2/modernizr.min.js"></script>
   <script type="text/javascript" src="http://alimd.github.io/libs/respond.js/1.1.0/respond.min.js"></script>
   <script type="text/javascript" src="http://alimd.github.io/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="scripts/main.0.1.js"></script>
+  <script type="text/javascript" src="scripts/main.js?v=0.1"></script>
 
 </body>
 </html>
