--- a/404_rtl.html
+++ b/404_rtl.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa-IR" dir="rtl">
     <head>
         <meta charset="utf-8" />
-        <title>Page Not Found :(</title>
+        <title>یافت نشد :(</title>
         <style>
             ::-moz-selection {
                 background: #b3d4fc;
@@ -141,15 +141,15 @@
     </head>
     <body>
         <div class="container">
-            <h1>Not found <span>:(</span></h1>
-            <p>Sorry, but the page you were trying to view does not exist.</p>
-            <p>It looks like this was the result of either:</p>
+            <h1>یافت نشد <span>:(</span></h1>
+            <p>متاسفیم، اما صفحه مورد نظر موجود نیس.</p>
+            <p>به نظر میرسه که به یکی از دلایل زیر رخ داده:</p>
             <ul>
-                <li>a mistyped address</li>
-                <li>an out-of-date link</li>
+                <li>تایپ اشتباه آدرس</li>
+                <li>تغییر لینک صفحه</li>
             </ul>
             <script>
-                var GOOG_FIXURL_LANG = (navigator.language || 'en').slice(0,2),GOOG_FIXURL_SITE = location.host;
+                var GOOG_FIXURL_LANG = (navigator.language || 'ar').slice(0,2),GOOG_FIXURL_SITE = location.host;
             </script>
             <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
         </div>
